fix feature refs as queryables